# memrs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  repl.rs
.github/workflows/: cli.yml  core.yml  docker.yml  pkgs-memrs-rs.yml  publish-cli.yml  publish-memrs-rs.yml
memrs-cli/: .gitignore  Cargo.toml
memrs-cli/src/: main.rs
memrs-core/: .gitignore  Cargo.toml
memrs-core/src/: config.rs  connection.rs  core.rs  lib.rs  repl.rs  snapshot.rs
pkgs/memrs-rs/: Cargo.toml
pkgs/memrs-rs/src/: blocking.rs  client.rs  error.rs  lib.rs  pool.rs
src/: config.rs  connection.rs  core.rs  lib.rs  main.rs  repl.rs
