[package]
name = "memrs"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["rand"] }
bincode = "1.3"
color-eyre = "0.6.5"
parking_lot = "0.12.5"
password-hash = "0.6.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
